--- a/frontend/login-vista.html
+++ b/frontend/login-vista.html
@@ -32,7 +32,7 @@
 </head>
 
 <body>
-    <header style="width: 100%; height: auto; padding: 4px; text-align: center; color: white; font-size: 17px; background: #0117CE;">
+    <header style="width: 100%; height: auto; padding: 4px; text-align: center; color: white; font-size: 17px; background: #B5B195;">
         <p>Hospital Regional de Alta Especialidad de Ixtapaluca.</p>
     </header>
     <div class="container">
@@ -63,7 +63,7 @@
             </div>
         </section>
     </div>
-    <footer style="width: 100%; position: fixed; background: #0117CE; height: auto; bottom: 0; color: white; margin-left: 0px; text-align: center;">
+    <footer style="width: 100%; position: fixed; background: #B5B195; height: auto; bottom: 0; color: white; margin-left: 0px; text-align: center;">
         <p>
             ® Hospital Regional de Alta Especialidad de Ixtapaluca, todos los derechos reservados. <br>
             Carr Federal México-Puebla Km. 34.5, Zoquiapan, 56530 Ixtapaluca, Méx.</p>
